<resources>
    <!-- App data strings -->
    <string name="app_name" translatable="false">Food Wikipedia</string>
    <string name="version_code" translatable="false">1.0</string>

    <string name="gmail" translatable="false">krupkoilla4@gmail.com</string>
    <string name="privacy_policy_link" translatable="false">https://ughsxl.github.io/foodwikipedia-privacy-policy/</string>


    <!-- Label strings -->
    <string name="about_label">About</string>
    <string name="settings_label">Settings</string>
    <string name="category_label">Category</string>
    <string name="menu_label">Menu</string>


    <!-- Header screen's button's strings -->
    <string name="launch_category">Discover</string>
    <string name="pick_category">Pick category</string>


    <!-- About screen's strings -->
    <string name="about_app_name">Application name: %s</string>
    <string name="about_version_code">Version: %s</string>
    <string name="github_link">Project link: <a href="https://github.com/ughsxl/FoodWikipedia">https://github.com/ughsxl/FoodWikipedia</a></string>
    <string name="send_feedback">Send feedback</string>
    <string name="privacy_policy">Privacy policy</string>


    <!-- Settings screen's strings -->
    <string name="music_label">Music</string>

    <string name="theme_label">Theme</string>
    <string name="light_theme_radio_button">Light</string>
    <string name="dark_theme_radio_button">Dark</string>

    <string name="language_label">Language</string>
    <string name="english_language" translatable="false">English</string>
    <string name="russian_language" translatable="false">Русский</string>
    <string name="ukrainian_language" translatable="false">Українська</string>

    
    <!-- Category screen strings -->
    <string name="main_representatives_label">Main Representatives</string>
    <string name="pick_any_item_label">Pick any %s</string>


    <!-- Category Item screen strings -->
    <string name="nutrition_value">Nutrition value (100g)</string>

    <string name="carbs_value">Carbs: %s</string>
    <string name="protein_value">Protein: %s</string>
    <string name="calories_value">Calories: %s</string>
    <string name="fiber_value">Fiber: %s</string>
    <string name="sugar_value">Sugar: %s</string>
    <string name="fats_value">Fats: %s</string>


    <string name="a_value">Vitamin A: %s</string>
    <string name="b1_value">Vitamin B-1: %s</string>
    <string name="b3_value">Vitamin B-3: %s</string>
    <string name="b6_value">Vitamin B-6: %s</string>
    <string name="b9_value">Vitamin B-9: %s</string>
    <string name="b12_value">Vitamin B-12: %s</string>
    <string name="c_value">Vitamin C: %s</string>
    <string name="d_value">Vitamin D: %s</string>
    <string name="e_value">Vitamin E: %s</string>

    <string name="calcium_value">Calcium: %s</string>
    <string name="iron_value">Iron: %s</string>
    <string name="magnesium_value">Magnesium: %s</string>
    <string name="omega3_value">Omega-3: %s</string>
    <string name="phosphorus_value">Phosphorus: %s</string>
    <string name="sodium_value">Sodium: %s</string>
    <string name="zinc_value">Zinc: %s</string>


    <!-- Core strings -->
    <string name="confirm_button_label">Confirm</string>
    <string name="pick_label">Pick</string>
    <string name="cancel_label">Cancel</string>
    <string name="first_pick_category_toast">First pick a category</string>
    <string name="an_error_occurred_toast">An error occurred</string>


    <!-- Food categories list -->
    <string-array name="categories_list">
        <item>Dairy</item>
        <item>Fruits</item>
        <item>Grains</item>
        <item>Herbs &amp; Spices</item>
        <item>Legumes</item>
        <item>Meat &amp; Freshwater Fish</item>
        <item>Nuts</item>
        <item>Seafood</item>
        <item>Vegetables</item>
    </string-array>

    <!-- ad id's -->
    <string name="admob_app_id" translatable="false">ca-app-pub-3467896291108690~7480539506</string>
    <string name="admob_interstitial_ad_id" translatable="false">ca-app-pub-3467896291108690/8190985944</string>
    <string name="admob_start_ad_id" translatable="false">ca-app-pub-3467896291108690/5015309649</string>
</resources>