<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".About" >


    <TextView
        android:id="@+id/applicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:text="@string/about_app_name" />

    <TextView
        android:id="@+id/versionCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:text="@string/about_version_code" />

    <TextView
        android:id="@+id/githubLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColorLink="@color/purple_700"
        android:text="@string/github_link" />


    <Button
        android:id="@+id/sendFeedbackButton"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/send_feedback" />


</LinearLayout>




