<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.screen.Settings">

    <include layout="@layout/actionbar"
        android:id="@+id/includedActionBar"/>

    <TextView
        android:id="@+id/musicState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/music_label"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/themeState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/musicOnOfSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:thumb="@drawable/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/musicState"
        app:layout_constraintTop_toTopOf="@id/musicState"
        app:layout_constraintBottom_toBottomOf="@+id/musicState"
        app:track="@drawable/track"/>

    <TextView
        android:id="@+id/themeState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/theme_label"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/languageState"
        app:layout_constraintStart_toStartOf="@id/musicState"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/themeState"
        app:layout_constraintBottom_toBottomOf="@+id/themeState"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/musicOnOfSwitch"
        app:layout_constraintTop_toBottomOf="@+id/musicOnOfSwitch">

        <RadioButton
            android:id="@+id/lightThemeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/custom_radio_group"
            android:button="@drawable/null_radio_button"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/light_theme_radio_button"
            android:textColor="@drawable/radio_text"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/darkThemeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_group"
            android:button="@drawable/null_radio_button"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/dark_theme_radio_button"
            android:textColor="@drawable/radio_text"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/languageState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/language_label"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmSettingsButton"
        app:layout_constraintStart_toStartOf="@id/themeState"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/languageState"
        app:layout_constraintBottom_toBottomOf="@id/languageState"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/languageState"
        app:layout_constraintStart_toStartOf="@+id/themeRadioGroup"
        android:layout_marginStart="-5dp"/>

    <Button
        android:id="@+id/confirmSettingsButton"
        android:layout_width="150dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>