<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:id="@+id/musicState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_label"
        android:textSize="36sp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/themeState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/musicOnOfSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="162dp"
        android:thumb="@drawable/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/musicState"
        app:layout_constraintTop_toTopOf="parent"
        app:track="@drawable/track"/>

    <TextView
        android:id="@+id/themeState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/theme_label"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/languageState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/languageState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/language_label"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmSettingsButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/thanksToView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/thanks_to_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>